# bigfiles

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: dupes_bench.rs  walker_bench.rs
src/: analyzer.rs  audit.rs  cache.rs  classifier.rs  delete.rs  dupes.rs  format.rs  lib.rs  main.rs  renderer.rs  tui.rs  walker.rs
src/snapshots/: bigfiles__dupes__tests__snapshot_dupes_render_with_groups.snap  bigfiles__dupes__tests__snapshot_empty_dupes_render.snap  bigfiles__renderer__tests__snapshot_default_render.snap  bigfiles__renderer__tests__snapshot_default_render_no_skipped.snap  bigfiles__renderer__tests__snapshot_render_top.snap
