[package]
name = "bigfiles"
version = "0.2.5"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
ignore     = "0.4"
clap       = { version = "4", features = ["derive"] }
owo-colors = "4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
blake3     = "1"
dialoguer  = "0.11"
pager      = "0.16"

[profile.release]
lto = true
codegen-units = 1
