[package]
name = "bigfiles"
version = "1.0.2"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Find what's eating your disk — a parallel directory scanner with category breakdown, stale-file flagging, and hardlink-aware duplicate detection."
repository = "https://github.com/Par-python/bigfiles"
homepage = "https://github.com/Par-python/bigfiles"
readme = "README.md"
keywords = ["cli", "disk", "duplicates", "filesystem", "deduplication"]
categories = ["command-line-utilities", "filesystem"]
authors = ["Jerome Pardo"]
exclude = ["target/", ".github/", "deny.toml"]

[dependencies]
ignore     = "0.4"
clap       = { version = "4", features = ["derive"] }
owo-colors = "4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
blake3     = "1"
dialoguer  = "0.11"
rayon      = "1"
indicatif  = "0.17"
ctrlc      = "3"

[target.'cfg(unix)'.dependencies]
pager      = "0.16"

[dev-dependencies]
tempfile   = "3"
insta      = "1"
criterion  = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dupes_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
